package com.nullteam;
import javafx.event.ActionEvent;
import javafx.fxml.FXML;

public class MainSceneController {

    @FXML
    void btnClicked(ActionEvent event) {

    }

}
